new component internatinalize

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,3 +19,7 @@
   =1 {one minute ago}
   other {{{ minutes }} minutes ago by {gender, select, male {male} female {female} other {other}}}}
 </span>
+<router-outlet></router-outlet>
+<nav>
+  <a routerLink="/my-component">Go to My Component</a>
+</nav>
