--- a/src/app/my-component/my-component.component.html
+++ b/src/app/my-component/my-component.component.html
@@ -1,1 +1,4 @@
 <p i18n="@@newTest">my-component works!</p>
+<h1 i18n="@@homeTitle">Welcome to My Angular App</h1>
+<p i18n="@@homeDescription">This is an example of Angular i18n with JSON format.</p>
+<h2 i18n="@@my">my</h2>
