--- a/src/app/my-component/my-component.component.html
+++ b/src/app/my-component/my-component.component.html
@@ -2,3 +2,4 @@
 <h1 i18n="@@homeTitle">Welcome to My Angular App</h1>
 <p i18n="@@homeDescription">This is an example of Angular i18n with JSON format.</p>
 <h2 i18n="@@my">my</h2>
+<h1 i18n="@@test">test</h1>
